<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:backgroundTint="@color/common_google_signin_btn_text_dark"
    android:elevation="20dp"
...
        android:textColor="@color/btnFacebook"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

<!--        <Button-->
<!--            android:id="@+id/btnAdd"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:text="Save 20%"-->
<!--            android:clickable="false"-->
<!--            android:layout_marginStart="48dp"-->
<!--            app:layout_constraintBaseline_toBaselineOf="@id/tvRating"-->
...
