...
    <ImageView
        android:src="@drawable/underline"
        android:id="@+id/imgLine"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toTopOf="@+id/rvProducts"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProducts"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
...
